--- a/src/style/activity.css
+++ b/src/style/activity.css
@@ -21,7 +21,7 @@ img {
 .body-activity {
   display: grid;
   gap: 20px;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
 }
 
 .date-activity {
@@ -178,7 +178,7 @@ textarea::-webkit-scrollbar {
 .button-activity {
     font-size: 17px;
     width: 130px;
-    padding: 1rem 0;
+    padding: 0.7rem 0;
     border-radius: 25px;
     border: none;
     position: relative;
