--- a/src/style/add.css
+++ b/src/style/add.css
@@ -410,7 +410,7 @@
 
   .container-main-cart {
     margin: auto;
-    min-height: 300px;
+    /* min-height: 300px; */
     box-shadow: var(--modal-shadow);
     border-radius: 5px;
     max-width: 600px;
